<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    tools:context=".AddWorkActivity">

    <TextView
        android:id="@+id/editTextHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="29dp"
        android:layout_toEndOf="@+id/textView"
        android:ems="10"
        android:hint="@string/timeDefault"
        android:onClick="chooseTime"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.537" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="41dp"
        android:text="@string/timeLabel"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/editTextHour"
        app:layout_constraintHorizontal_bias="0.553"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.503" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="51dp"
        android:text="@string/workLabel"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextHour"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="34dp"
        android:layout_toEndOf="@+id/textView2"
        android:ems="10"
        android:hint="@string/hintEditText"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="51dp"
        android:text="@string/destinationLabel"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editTextLocation"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.085" />

    <EditText
        android:id="@+id/editTextLocation"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextTitle"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="14dp"
        android:layout_toEndOf="@+id/textView4"
        android:ems="10"
        android:hint="@string/hintEditLAbel"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="122dp"
        android:layout_height="41dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="51dp"
        android:text="@string/reminderLabel"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnFinish"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/groupNotify"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="114dp"
        android:layout_marginTop="81dp"
        android:layout_marginEnd="111dp"
        android:onClick="btnFinish"
        android:text="@string/btnFinishLabel" />

    <RadioGroup
        android:id="@+id/groupNotify"
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextLocation"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="14dp"
        android:layout_toEndOf="@+id/textView3">

        <RadioButton
            android:id="@+id/notifyNone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/noneButtonRadio" />

        <RadioButton
            android:id="@+id/notify5Min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fiveRadioButton" />

        <RadioButton
            android:id="@+id/notify30Min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thirtyRadioButton" />

        <RadioButton
            android:id="@+id/notify60Min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sixtyRadioButton" />
    </RadioGroup>

</RelativeLayout>
</ScrollView>